# skills

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  NOTICE  README.md  TODO.md
release-notes/: v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.7.1.md  v1.7.2.md  v1.8.0.md  v1.8.1.md  v1.8.2.md
scripts/: install.ps1  install.sh  release.ps1  release.sh
skills/_template/: SKILL.md
skills/shruggie-docs/: SKILL.md
skills/shruggie-docs/assets/: brand-rules.md  doc-type-defaults.json  document-template.js  embed-fonts.py  style-spec.json
skills/shruggie-graph-memory/: README.md  SKILL.md
skills/shruggie-graph-memory/assets/: capture-reference.md
skills/shruggie-html/: SKILL.md
skills/shruggie-html/assets/: brand-rules.md  brand.css  inline-assets.md  page-template.html  sections.md
skills/shruggie-markdown/: README.md  SKILL.md
skills/shruggie-markdown/assets/: authoring-reference.md  images-and-diagrams.md  renderer-compatibility.md
skills/shruggie-markdown/scripts/: Encode-ImageDataUri.ps1  encode-image-datauri.sh
skills/shruggie-powershell/: SKILL.md
skills/shruggie-powershell/assets/: fixtures.md  powershell-conventions.md  script-template.ps1
skills/shruggie-speckit/: README.md  SKILL.md
tools/gdocs-style-extract/: LICENSE  README.md  pyproject.toml
tools/gdocs-style-extract/src/gdocs_style_extract/: __init__.py  __main__.py  auth.py  cli.py  compare.py  emit_json.py  emit_markdown.py  extract.py  fetch.py  paths.py
(+11 files in other folders)
